# swagger_output.json
@@ -85,6 +85,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "status": {
+                  "example": "any"
+                },
                 "url": {
                   "example": "any"
                 },
@@ -108,6 +111,13 @@
     "/updateproxy": {
       "put": {
         "description": "",
+        "parameters": [
+          {
+            "name": "proxyid",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
@@ -118,6 +128,13 @@
     "/delproxy": {
       "delete": {
         "description": "",
+        "parameters": [
+          {
+            "name": "proxyid",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
